alteração no nome do projeto

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>exibir_string_repetido</name>
+	<name>exibir_string_repetida</name>
 	<comment></comment>
 	<projects>
 	</projects>
